@@ -1,5 +1,8 @@
 Release Notes
 
+* 2/1/2016
+  * fixed insertFilesForDataset_JEDI for ready->defined in scout
+
 * 1/30/2016
   * changed log messages of AtlasPTB to be compatible with bamboo
 
